--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"This is my person
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: remiadon1
-github_username:  remiadon
+github_username: remiadon
+linkedin_url: https://remiadon.com
 
 # Build settings
 markdown: kramdown
