initialise splice_git

--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -2,3 +2,7 @@
   name: Machine Learning
 - slug: python
   name: Python
+- slug: git
+  name: Git
+- slug: computer-aided-music
+  name: Computer Aided Music
