--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: A Bag Of Words
 email: remi.adon@gmail.com
 description: > # this means to ignore newlines until "baseurl:"This is my personnal blog
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://remiadon.github.io" # the base hostname & protocol for your site
 twitter_username: remiadon1
 github_username: remiadon
 linkedin_url: https://remiadon.com
