--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: remi.adon@gmail.com
 description: > # this means to ignore newlines until "baseurl:"This is my personnal blog
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://remiadon.github.io" # the base hostname & protocol for your site
-twitter_username: remiadon1
+twitter_username: remiadonmaury
 github_username: remiadon
 linkedin_url: https://remiadon.com
 
